<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Used to prevent scrollview scrolling bottom after game type change-->
    <View
        android:id="@+id/focus_stealer"
        android:layout_width="match_parent"
        android:layout_height="0px"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_lottery_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:hint="@string/lottery_type"
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
        android:labelFor="@+id/text_lottery_type"
        android:clickable="false"
        android:focusable="false">

        <AutoCompleteTextView
            android:id="@+id/text_lottery_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:cursorVisible="false"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/layout_ticket_properties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_lottery_type"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:hint="@string/date"
            android:layout_marginTop="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_row_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/row_number"
            android:layout_marginTop="12dp"
            android:labelFor="@id/text_row_number"
            android:paddingStart="12dp"
            app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="false"
            android:focusable="false">

            <AutoCompleteTextView
                android:id="@+id/text_row_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_fraction"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:hint="@string/fraction"
            android:layout_marginTop="12dp"
            android:labelFor="@id/text_row_number"
            android:paddingStart="12dp"
            app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/text_fraction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/method_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/layout_ticket_properties"
        app:singleSelection="true"
        android:layout_marginTop="12dp">

        <com.creadeep.kazanio.CustomMaterialButton
            android:id="@+id/button_method_manual"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="12sp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/button_text_manual"/>

        <com.creadeep.kazanio.CustomMaterialButton
            android:id="@+id/button_method_random"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="12sp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/button_text_random"/>

        <com.creadeep.kazanio.CustomMaterialButton
            android:id="@+id/button_method_most_freq"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="12sp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/button_text_most"/>

        <com.creadeep.kazanio.CustomMaterialButton
            android:id="@+id/button_method_least_freq"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="12sp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/button_text_least"/>
    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/method_selector"
        android:layout_marginBottom="0dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout_rows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:tabMode="auto"
            app:tabTextColor="@color/grey_font"
            app:tabSelectedTextColor="@color/colorPrimary">
        </com.google.android.material.tabs.TabLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_rows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tab_layout_rows">

        </androidx.viewpager2.widget.ViewPager2>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_number_mp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_number"
        android:layout_marginTop="12dp"
        android:paddingBottom="16dp"
        android:hint="@string/number"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_number_mp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_number_mp"
        style="?android:attr/borderlessButtonStyle"
        android:orientation="horizontal"
        android:background="@color/white">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/button_add"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_marginEnd="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/dialog_cancel" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/button_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginStart="8dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/dialog_add"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
